--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>to do list</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <div class="container">
@@ -12,7 +14,7 @@
         <div class="input-section">
             <input type="text" id="task-input" placeholder="Enter a new task"/>
             <button onclick="addtask()">+ Add Task</button>
-            <div> <span> id="total">0</span><p>All Tasks</p></div>
+            <div> <span id="total">0</span><p>All Tasks</p></div>
             <div> <span id="pending">0</span><p>Pending</p></div>
             <div> <span id="completed">0</span><p>Completed</p></div>
 </div>
