add and delete functionalties added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <button onclick="filterTasks('pending')">pending</button>
             <button onclick="filterTasks('completed')">completed</button>
         </div>
+         <ul class="task-list"></ul>
     </div>
+   
         
 
     
