--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <button onclick="filterTasks('pending')">pending</button>
             <button onclick="filterTasks('completed')">completed</button>
         </div>
-         <ul class="task-list"></ul>
+         <ul id="task-list"></ul>
     </div>
+
+    <script src="script.js"></script>
    
         
 
