--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
         <div class="input-section">
             <input type="text" id="task-input" placeholder="Enter a new task"/>
             <button onclick="addtask()">+ Add Task</button>
-            <div class="stats">
-            <div> <span id="total">0</span><p>All Tasks</p></div>
-            <div> <span id="pending">0</span><p>Pending</p></div>
-            <div> <span id="completed">0</span><p>Completed</p></div>
-</div>      </div>
+               </div>
         <div class="filters">
             <button onclick="filterTasks('all')">All</button>
             <button onclick="filterTasks('pending')">pending</button>
